--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -55,18 +55,18 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main c03efcb] first commit\n",
-      " 1 file changed, 16 insertions(+), 6 deletions(-)\n",
+      "[main b6a89c2] first commit\n",
+      " 1 file changed, 12 insertions(+), 11 deletions(-)\n",
       "fatal: remote origin already exists.\n",
       "Enumerating objects: 5, done.\n",
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 635 bytes | 635.00 KiB/s, done.\n",
+      "Writing objects: 100% (3/3), 438 bytes | 438.00 KiB/s, done.\n",
       "Total 3 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   4955c28..c03efcb  main -> main\n",
+      "   c03efcb..b6a89c2  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
       "fatal: remote origin already exists.\n"
      ]
@@ -84,7 +84,7 @@
     "!git push -u origin main\n",
     "# #push an existing repository from the command line\n",
     "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "# !git branch -M main\n",
+    "!git branch -M main\n",
     "# !git push -u origin main"
    ]
   },
