--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -55,20 +55,22 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main b6a89c2] first commit\n",
-      " 1 file changed, 12 insertions(+), 11 deletions(-)\n",
+      "[main 442f2b2] first commit\n",
+      " 1 file changed, 6 insertions(+), 6 deletions(-)\n",
       "fatal: remote origin already exists.\n",
       "Enumerating objects: 5, done.\n",
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 438 bytes | 438.00 KiB/s, done.\n",
+      "Writing objects: 100% (3/3), 384 bytes | 384.00 KiB/s, done.\n",
       "Total 3 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   c03efcb..b6a89c2  main -> main\n",
+      "   b6a89c2..442f2b2  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
-      "fatal: remote origin already exists.\n"
+      "fatal: remote origin already exists.\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
+      "Everything up-to-date\n"
      ]
     }
    ],
@@ -85,7 +87,7 @@
     "# #push an existing repository from the command line\n",
     "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
     "!git branch -M main\n",
-    "# !git push -u origin main"
+    "!git push -u origin main"
    ]
   },
   {
@@ -99,18 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updating 1a1b9b9..594646a\n",
-      "error: Your local changes to the following files would be overwritten by merge:\n",
-      "\tREADME.md\n",
-      "Please commit your changes or stash them before you merge.\n",
-      "Aborting\n"
+      "Already up to date.\n"
      ]
     }
    ],
