--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -95,9 +95,7 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git config --global user.email \"sa1244@fayoum.edu.eg\" && git config --global user.name \"elkomysara\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -196,37 +194,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# creating 0x00-shell_basics folder\n",
+    "# import os\n",
+    "# # creating 0x00-shell_basics folder\n",
     "\n",
-    "folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
+    "# folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
+    "# if not os.path.exists(folder_path):\n",
+    "#     os.makedirs(folder_path)\n",
     "\n",
-    "# Create a README.md inside 0x00-shell_basics\n",
-    "file_path = os.path.join(folder_path, 'README.md')\n",
+    "# # Create a README.md inside 0x00-shell_basics\n",
+    "# file_path = os.path.join(folder_path, 'README.md')\n",
     "\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write(\"This is a mandatory file\")\n",
+    "# with open(file_path, 'w') as file:\n",
+    "#     file.write(\"This is a mandatory file\")\n",
     "\n",
-    "# Create 0-current_working_directory\n",
-    "file_path = os.path.join(folder_path, '0-current_working_directory')\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write(\"#!/bin/bash/npwd/n\")"
+    "# # Create 0-current_working_directory\n",
+    "# file_path = os.path.join(folder_path, '0-current_working_directory')\n",
+    "# with open(file_path, 'w') as file:\n",
+    "#     file.write(\"#!/bin/bash/npwd/n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/0-current_working_directory"
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/0-current_working_directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +238,26 @@
    ],
    "source": [
     "!cat 0x00-shell_basics/0-current_working_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x00-shell_basics\n",
+      "README.md\n",
+      "alx-system_engineering-devops.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "./0x00-shell_basics/1-listit"
    ]
   },
   {
