--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -262,31 +262,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'alx-system_engineering-devops.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e75e867] commit 0-current_working_directory\n",
-      " 1 file changed, 4 insertions(+), 4 deletions(-)\n",
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[main fb4fa36] commit 0-current_working_directory\n",
+      " 2 files changed, 37 insertions(+), 19 deletions(-)\n",
+      " mode change 100644 => 100755 0x00-shell_basics/0-current_working_directory\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 573 bytes | 573.00 KiB/s, done.\n",
+      "Total 4 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   c6d18f0..e75e867  main -> main\n"
+      "   7baf591..fb4fa36  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
@@ -337,17 +332,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# creating 0x00-shell_basics folder\n",
+    "# import os\n",
+    "# # creating 0x00-shell_basics folder\n",
     "\n",
-    "folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
+    "# folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
+    "# if not os.path.exists(folder_path):\n",
+    "#     os.makedirs(folder_path)\n",
     "\n",
-    "# Create 0-current_working_directory\n",
-    "file_path = os.path.join(folder_path, '1-listit')\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write(\"#!/bin/bash/nls/n\")"
+    "# # Create 0-current_working_directory\n",
+    "# file_path = os.path.join(folder_path, '1-listit')\n",
+    "# with open(file_path, 'w') as file:\n",
+    "#     file.write(\"#!/bin/bash/nls/n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit\n",
+    "\n",
+    "#!/bin/bash\n",
+    "ls/n\n",
+    "\n"
    ]
   },
   {
@@ -363,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/1-listit"
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit"
    ]
   },
   {
