--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
     "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit\n",
     "\n",
     "#!/bin/bash\n",
-    "ls/n\n",
+    "ls\n",
     "\n"
    ]
   },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,31 +384,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'alx-system_engineering-devops.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 28ffc27] commit 1-listit\n",
-      " 3 files changed, 17 insertions(+), 10 deletions(-)\n",
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[main ad64921] commit 1-listit\n",
+      " 2 files changed, 47 insertions(+), 29 deletions(-)\n",
+      "Enumerating objects: 9, done.\n",
+      "Counting objects: 100% (9/9), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (5/5), 731 bytes | 731.00 KiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   7a23d95..28ffc27  main -> main\n"
+      "   fb4fa36..ad64921  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
