--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,6 @@
    ],
    "source": [
     "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit\n",
-    "\n",
     "#!/bin/bash\n",
     "ls"
    ]
@@ -374,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,24 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f975390] commit 1-listit\n",
-      " 2 files changed, 16 insertions(+), 22 deletions(-)\n",
+      "[main 77f7c48] commit 1-listit1\n",
+      " 2 files changed, 8 insertions(+), 10 deletions(-)\n",
       "Enumerating objects: 9, done.\n",
       "Counting objects: 100% (9/9), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 618 bytes | 618.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 513 bytes | 513.00 KiB/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   ad64921..f975390  main -> main\n",
+      "   f975390..77f7c48  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -408,7 +407,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"commit 1-listit\"\n",
+    "!git commit -m \"commit 1-listit1\"\n",
     "!git push -u origin main"
    ]
   },
