--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,24 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 77f7c48] commit 1-listit1\n",
+      "[main 008d5c7] commit 1-listit1\n",
       " 2 files changed, 8 insertions(+), 10 deletions(-)\n",
       "Enumerating objects: 9, done.\n",
       "Counting objects: 100% (9/9), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 513 bytes | 513.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 547 bytes | 547.00 KiB/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f975390..77f7c48  main -> main\n",
+      "   77f7c48..008d5c7  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -456,19 +456,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n"
+      "Overwriting /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n"
      ]
     }
    ],
    "source": [
-    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n",
+    "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n",
     "#!/bin/bash\n",
     "cd ~"
    ]
@@ -479,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home"
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home"
    ]
   },
   {
