--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -92,13 +92,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -557,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,38 +579,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'alx-system_engineering-devops.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2ffca2e] commit 3-listfiles\n",
-      " 2 files changed, 20 insertions(+), 64 deletions(-)\n",
-      "branch 'main' set up to track 'origin/main'."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[main 8f9e440] commit 3-listfiles\n",
+      " 2 files changed, 20 insertions(+), 47 deletions(-)\n",
+      " mode change 100644 => 100755 0x00-shell_basics/3-listfiles\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 534 bytes | 534.00 KiB/s, done.\n",
+      "Total 4 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   28ffc27..2ffca2e  main -> main\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "   ec539e2..8f9e440  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
