committing the 4-listmorefiles

--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,25 +579,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 8f9e440] commit 3-listfiles\n",
-      " 2 files changed, 20 insertions(+), 47 deletions(-)\n",
-      " mode change 100644 => 100755 0x00-shell_basics/3-listfiles\n",
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "[main e48f9a6] commit 3-listfiles\n",
+      " 1 file changed, 15 insertions(+), 34 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 534 bytes | 534.00 KiB/s, done.\n",
-      "Total 4 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 410 bytes | 410.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   ec539e2..8f9e440  main -> main\n",
+      "   8f9e440..e48f9a6  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -666,12 +665,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n"
+      "Overwriting /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n"
      ]
     }
    ],
    "source": [
-    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n",
+    "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n",
     "#!/bin/bash\n",
     "ls -la"
    ]
@@ -682,7 +681,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles"
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles"
    ]
   },
   {
