--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -690,35 +690,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'alx-system_engineering-devops.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 20b400a] committing the 4-listmorefiles\n",
-      " 2 files changed, 95 insertions(+), 63 deletions(-)\n",
-      " create mode 100644 0x00-shell_basics/4-listmorefiles\n",
-      "branch 'main' set up to track 'origin/main'."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[main 1b33355] committing the 4-listmorefiles\n",
+      " 2 files changed, 14 insertions(+), 15 deletions(-)\n",
+      " mode change 100644 => 100755 0x00-shell_basics/4-listmorefiles\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 506 bytes | 506.00 KiB/s, done.\n",
+      "Total 4 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   2ffca2e..20b400a  main -> main\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "   e48f9a6..1b33355  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
@@ -730,81 +717,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "./"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. HAAA what did you do???"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### What happens when you update the same file at the same time?\n",
-    "##### Merge the branch update_script to main: “Cool, all my changes will be now part of the main branch, ready to be deployed!”\n",
-    "##### CONFLICT (content): Merge conflict in bash/alx\n",
-    "##### You have conflicts between two branches on the same file.\n",
-    "##### Resolve conflicts by using the version of the branch update_script, and push the result to the origin.\n",
-    "##### You should have all your work from the branch update_script (new file and two updated files) and all latest main commits (new files, delete folder, etc.), without conflicts.\n",
-    "\n",
-    "##### Repo:\n",
-    "\n",
-    "* GitHub repository: alx-zero_day\n",
-    "* Directory: 0x03-git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M\talx-zero_day.ipynb\n",
-      "Your branch is up to date with 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Already on 'main'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already up to date.\n",
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: branch.main.remote has multiple values\n",
-      "warning: branch.main.merge has multiple values\n",
-      "Everything up-to-date\n"
+      "total 52\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 10 18:49 .\n",
+      "drwxr-xr-x 15 elkomy elkomy  4096 Feb 10 19:07 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 11 00:07 .git\n",
+      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 10 18:49 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy    32 Feb 10 18:52 README.md\n",
+      "-rw-r--r--  1 elkomy elkomy 27213 Feb 11 00:07 alx-system_engineering-devops.ipynb\n"
      ]
     }
    ],
    "source": [
-    "# Merge the branch update_script to main: \"Cool, all my changes will be now part of the main branch, ready to be deployed!\"\n",
-    "!git switch main\n",
-    "!git merge origin/update_script\n",
-    "!git push -u origin main\n"
+    "%%bash\n",
+    "./0x00-shell_basics/4-listmorefiles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 5. I love numbers </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Display Current directory contents.\n",
+    "* Long format\n",
+    "* With user and group IDs displayed numerically\n",
+    "* and hidden files (starting with .)\n",
+    "\n",
+    "##### Example:\n",
+    "`$ ./5-listfilesdigitonly`\n",
+    "\n",
+    "`total 32`\n",
+    "\n",
+    "`drwxr-xr-x@ 6 501 20 204 Jan 25 00:29 .`\n",
+    "\n",
+    "`drwxr-xr-x@ 43 501 20 1462 Jan 25 00:19 ..`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:19 0-current_working_directory`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:23 1-listfiles`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 501 20 19 Jan 25 00:29 2-bring_me_home`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 501 20 20 Jan 25 00:39 3-listfiles`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:41 4-listmorefiles`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:43 5-listfilesdigitonly`\n",
+    "\n",
+    "\n",
+    "##### Repo:\n",
+    "\n",
+    "* GitHub repository: alx-system_engineering-devops\n",
+    "* Directory: 0x00-shell_basics\n",
+    "* File: 5-listfilesdigitonly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/5-listfilesdigitonly\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/5-listfilesdigitonly\n",
+    "#!/bin/bash\n",
+    "ls -lan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 52\n",
+      "drwxr-xr-x  4 1000 1000  4096 Feb 11 00:26 .\n",
+      "drwxr-xr-x 15 1000 1000  4096 Feb 10 19:07 ..\n",
+      "drwxr-xr-x  8 1000 1000  4096 Feb 11 00:07 .git\n",
+      "-rw-r--r--  1 1000 1000    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 1000 1000  4096 Feb 11 00:26 0x00-shell_basics\n",
+      "-rw-r--r--  1 1000 1000    32 Feb 10 18:52 README.md\n",
+      "-rw-r--r--  1 1000 1000 27721 Feb 11 00:27 alx-system_engineering-devops.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/5-listfilesdigitonly\n",
+    "./0x00-shell_basics/5-listfilesdigitonly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"5-listfilesdigitonly\"\n",
+    "git push"
    ]
   },
   {
