--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "'/home/elkomy/alx-system_engineering-devops'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,14 +150,16 @@
     "\n",
     "#### Write a script that prints the absolute path name of the current working directory. \n",
     "#### Example:\n",
-    "<code> $ ./0-current_working_directory  </code>\n",
-    "\n",
-    "<code> /root/alx-system_engineering-devops/0x00-shell_basics  </code>\n",
+    "```bash\n",
+    "$ ./0-current_working_directory\n",
+    "/root/alx-system_engineering-devops/0x00-shell_basics\n",
+    "$\n",
+    "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "\n",
-    "* GitHub repository: <code> alx-system_engineering-devops </code>\n",
+    "* GitHub repository: ``` alx-system_engineering-devops ```\n",
     "* Directory: <code> 0x00-shell_basics </code>\n",
     "* File: <code>  0-current_working_directory </code>"
    ]
@@ -304,12 +306,12 @@
    "source": [
     "* Display the contents list of your current directory.\n",
     "* Example:\n",
-    "\n",
-    "\n",
-    "    <code > $ ./1-listit </code>   \n",
-    "    <code > Applications    Documents   Dropbox Movies Pictures\n",
+    "    ```bash\n",
+    "    $ ./1-listit\n",
+    "    Applications    Documents   Dropbox Movies Pictures\n",
     "    Desktop Downloads   Library Music Public\n",
-    "    </code>  \n",
+    "    $\n",
+    "    ```\n",
     "\n",
     "* Repo:\n",
     "\n",
@@ -424,21 +426,17 @@
     "#### Write a script that changes the working directory to the user’s home directory.\n",
     "* You are not allowed to use any shell variables\n",
     "\n",
-    "    `julien@ubuntu:/tmp$ pwd ` \n",
+    "```bash\n",
     "\n",
-    "    `/tmp`\n",
-    "\n",
-    "    `julien@ubuntu:/tmp$ echo $HOME`\n",
-    "\n",
-    "    `/home/julien`\n",
-    "\n",
-    "    `julien@ubuntu:/tmp$ source ./2-bring_me_home`\n",
-    "\n",
-    "    `julien@ubuntu:~$ pwd`\n",
-    "\n",
-    "    `/home/julien`\n",
-    "\n",
-    "    `julien@ubuntu:~$`\n",
+    "julien@ubuntu:/tmp$ pwd\n",
+    "/tmp\n",
+    "julien@ubuntu:/tmp$ echo $HOME\n",
+    "/home/julien\n",
+    "julien@ubuntu:/tmp$ source ./2-bring_me_home\n",
+    "julien@ubuntu:~$ pwd\n",
+    "/home/julien\n",
+    "julien@ubuntu:~$ \n",
+    "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
@@ -527,19 +525,15 @@
     "\n",
     "#### Example:\n",
     "\n",
-    "`$ ./3-listfiles`\n",
-    "\n",
-    "`total 32`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles`\n",
-    "\n",
-    "`$`\n",
+    "```bash\n",
+    "$ ./3-listfiles\n",
+    "total 32\n",
+    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory\n",
+    "-rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit\n",
+    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home\n",
+    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles\n",
+    "$\n",
+    "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
@@ -630,25 +624,18 @@
     "\n",
     "Example:\n",
     "\n",
-    "```  $ ./4-listmorefiles```\n",
-    "\n",
-    "`    total 32`\n",
-    "\n",
-    "`    drwxr-xr-x@ 6 sylvain staff 204 Jan 25 00:29 .`\n",
-    "\n",
-    "`    drwxr-xr-x@ 43 sylvain staff 1462 Jan 25 00:19 ..`\n",
-    "\n",
-    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory`\n",
-    "\n",
-    "`    -rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit`\n",
-    "\n",
-    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home`\n",
-    "\n",
-    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles`\n",
-    "\n",
-    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:41 4-listmorefiles`\n",
-    "`    $ `\n",
-    "\n",
+    "```bash\n",
+    "$ ./4-listmorefiles\n",
+    "total 32\n",
+    "drwxr-xr-x@ 6 sylvain staff 204 Jan 25 00:29 .\n",
+    "drwxr-xr-x@ 43 sylvain staff 1462 Jan 25 00:19 ..\n",
+    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory\n",
+    "-rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit\n",
+    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home\n",
+    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles\n",
+    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:41 4-listmorefiles\n",
+    "$\n",
+    "```\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
@@ -765,26 +752,19 @@
     "* and hidden files (starting with .)\n",
     "\n",
     "##### Example:\n",
-    "`$ ./5-listfilesdigitonly`\n",
     "\n",
-    "`total 32`\n",
-    "\n",
-    "`drwxr-xr-x@ 6 501 20 204 Jan 25 00:29 .`\n",
-    "\n",
-    "`drwxr-xr-x@ 43 501 20 1462 Jan 25 00:19 ..`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:19 0-current_working_directory`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:23 1-listfiles`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 501 20 19 Jan 25 00:29 2-bring_me_home`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 501 20 20 Jan 25 00:39 3-listfiles`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:41 4-listmorefiles`\n",
-    "\n",
-    "`-rwxr-xr-x@ 1 501 20 18 Jan 25 00:43 5-listfilesdigitonly`\n",
-    "\n",
+    "```bash\n",
+    "$ ./5-listfilesdigitonly\n",
+    "total 32\n",
+    "drwxr-xr-x@ 6 501 20 204 Jan 25 00:29 .\n",
+    "drwxr-xr-x@ 43 501 20 1462 Jan 25 00:19 ..\n",
+    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:19 0-current_working_directory\n",
+    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:23 1-listfiles\n",
+    "-rwxr-xr-x@ 1 501 20 19 Jan 25 00:29 2-bring_me_home\n",
+    "-rwxr-xr-x@ 1 501 20 20 Jan 25 00:39 3-listfiles\n",
+    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:41 4-listmorefiles\n",
+    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:43 5-listfilesdigitonly\n",
+    "```\n",
     "\n",
     "##### Repo:\n",
     "\n",
@@ -792,6 +772,11 @@
     "* Directory: 0x00-shell_basics\n",
     "* File: 5-listfilesdigitonly"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -840,9 +825,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 2a7811e] 5-listfilesdigitonly\n",
+      " 2 files changed, 108 insertions(+), 63 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/5-listfilesdigitonly\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   1b33355..2a7811e  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "git add .\n",
@@ -854,20 +857,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Never push too much"
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 6.Welcome </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create a .gitignore file and define a rule to never push ~ files (generated by Emacs). \n",
+    "##### Create a script that creates a directory named my_first_directory in the /tmp/ directory.\n",
+    "\n",
+    "##### Example:\n",
+    "```bash\n",
+    "$ ./6-firstdirectory\n",
+    "$ file /tmp/my_first_directory/\n",
+    "/tmp/my_first_directory/: directory\n",
+    "$\n",
+    "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
-    "* GitHub repository: alx-zero_day\n",
-    "* Directory: 0x03-git\n",
-    "* File: .gitignore"
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `6-firstdirectory`"
    ]
   },
   {
@@ -1028,7 +1047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
