--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,18 +55,18 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main 442f2b2] first commit\n",
-      " 1 file changed, 6 insertions(+), 6 deletions(-)\n",
+      "[main 09c5162] first commit\n",
+      " 1 file changed, 103 insertions(+), 84 deletions(-)\n",
       "fatal: remote origin already exists.\n",
       "Enumerating objects: 5, done.\n",
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 384 bytes | 384.00 KiB/s, done.\n",
+      "Writing objects: 100% (3/3), 956 bytes | 956.00 KiB/s, done.\n",
       "Total 3 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b6a89c2..442f2b2  main -> main\n",
+      "   2a7811e..09c5162  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
       "fatal: remote origin already exists.\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,20 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
-      "\u001b[31merror: failed to push some refs to 'https://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@github.com/elkomysara/alx-system_engineering-devops.git'\n",
-      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
-      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
-      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
-      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
+      "Everything up-to-date\n"
      ]
     }
    ],
@@ -166,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,6 +174,7 @@
    "source": [
     "%%file README.md\n",
     "\n",
+    "This is a file inside the folder alx-system_engineering-devops.\n",
     "This is a mandatory file."
    ]
   },
