--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -180,32 +180,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# # creating 0x00-shell_basics folder\n",
+    "import os\n",
+    "# creating 0x00-shell_basics folder\n",
     "\n",
-    "# folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
-    "# if not os.path.exists(folder_path):\n",
-    "#     os.makedirs(folder_path)\n",
+    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x00-shell_basics'\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
     "\n",
-    "# # Create a README.md inside 0x00-shell_basics\n",
-    "# file_path = os.path.join(folder_path, 'README.md')\n",
+    "# Create a README.md inside 0x00-shell_basics\n",
+    "file_path = os.path.join(folder_path, 'README.md')\n",
     "\n",
-    "# with open(file_path, 'w') as file:\n",
-    "#     file.write(\"This is a mandatory file\")\n",
+    "with open(file_path, 'w') as file:\n",
+    "    file.write(\"This is a README.md file inside alx-system_engineering-devops/0x00-shell_basics\")\n",
     "\n",
-    "# # Create 0-current_working_directory\n",
-    "# file_path = os.path.join(folder_path, '0-current_working_directory')\n",
-    "# with open(file_path, 'w') as file:\n",
-    "#     file.write(\"#!/bin/bash/npwd/n\")"
+    "# Create 0-current_working_directory\n",
+    "file_path = os.path.join(folder_path, '0-current_working_directory')\n",
+    "with open(file_path, 'w') as file:\n",
+    "    file.write(\"#!/bin/bash\\npwd\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -232,22 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x00-shell_basics\n",
-      "README.md\n",
-      "alx-system_engineering-devops.ipynb\n"
+      "/home/elkomy/alx-system_engineering-devops\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "./0x00-shell_basics/1-listit"
+    "./0x00-shell_basics/0-current_working_directory"
    ]
   },
   {
