--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -250,25 +250,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main fb4fa36] commit 0-current_working_directory\n",
-      " 2 files changed, 37 insertions(+), 19 deletions(-)\n",
-      " mode change 100644 => 100755 0x00-shell_basics/0-current_working_directory\n",
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "[main 0645cde] commit 0-current_working_directory\n",
+      " 2 files changed, 20 insertions(+), 22 deletions(-)\n",
+      "Enumerating objects: 9, done.\n",
+      "Counting objects: 100% (9/9), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 573 bytes | 573.00 KiB/s, done.\n",
-      "Total 4 (delta 3), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 647 bytes | 647.00 KiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   7baf591..fb4fa36  main -> main\n",
+      "   a80849a..0645cde  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -316,21 +315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# # creating 0x00-shell_basics folder\n",
+    "import os\n",
+    "# creating 0x00-shell_basics folder\n",
     "\n",
-    "# folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
-    "# if not os.path.exists(folder_path):\n",
-    "#     os.makedirs(folder_path)\n",
+    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x00-shell_basics'\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
     "\n",
-    "# # Create 0-current_working_directory\n",
-    "# file_path = os.path.join(folder_path, '1-listit')\n",
-    "# with open(file_path, 'w') as file:\n",
-    "#     file.write(\"#!/bin/bash/nls/n\")"
+    "# Create 0-current_working_directory\n",
+    "file_path = os.path.join(folder_path, '1-listit')\n",
+    "with open(file_path, 'w') as file:\n",
+    "    file.write(\"#!/bin/bash\\nls\\n\")"
    ]
   },
   {
@@ -366,6 +365,41 @@
    "outputs": [],
    "source": [
     "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/bin/bash\n",
+      "ls\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat 0x00-shell_basics/1-listit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x00-shell_basics  README.md  alx-system_engineering-devops.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x00-shell_basics/1-listit"
    ]
   },
   {
