--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "'/home/elkomy/alx-system_engineering-devops'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,24 +404,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 008d5c7] commit 1-listit1\n",
-      " 2 files changed, 8 insertions(+), 10 deletions(-)\n",
-      "Enumerating objects: 9, done.\n",
-      "Counting objects: 100% (9/9), done.\n",
+      "[main 530d68e] commit 1-listit1\n",
+      " 1 file changed, 54 insertions(+), 20 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 547 bytes | 547.00 KiB/s, done.\n",
-      "Total 5 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 533 bytes | 533.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   77f7c48..008d5c7  main -> main\n",
+      "   0645cde..530d68e  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -474,30 +474,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# creating 0x00-shell_basics folder\n",
+    "\n",
+    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x00-shell_basics'\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
+    "\n",
+    "# Create 0-current_working_directory\n",
+    "file_path = os.path.join(folder_path, '2-bring_me_home')\n",
+    "with open(file_path, 'w') as file:\n",
+    "    file.write('#!/bin/bash\\ncd ~\\n')\n",
+    "    #file.write('#!/bin/bash\\ncd \"$HOME\"\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!source ./0x00-shell_basics/2-bring_me_home"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n"
+      "#!/bin/bash\n",
+      "cd ~\n"
      ]
     }
    ],
    "source": [
-    "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n",
-    "#!/bin/bash\n",
-    "cd ~"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home"
+    "!cat 0x00-shell_basics/2-bring_me_home"
    ]
   },
   {
@@ -1074,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
