--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -530,25 +530,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main ec539e2] commit 2-bring_me_home\n",
-      " 2 files changed, 9 insertions(+), 9 deletions(-)\n",
-      " mode change 100644 => 100755 0x00-shell_basics/2-bring_me_home\n",
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "[main 3ebeef5] commit 2-bring_me_home\n",
+      " 1 file changed, 55 insertions(+), 27 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 481 bytes | 481.00 KiB/s, done.\n",
-      "Total 4 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 599 bytes | 66.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   008d5c7..ec539e2  main -> main\n",
+      "   530d68e..3ebeef5  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -599,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -618,12 +617,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/3-listfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/bin/bash\n",
+      "ls -l\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat 0x00-shell_basics/3-listfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 40\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Feb 11 00:26 0x00-shell_basics\n",
+      "-rw-r--r-- 1 elkomy elkomy    32 Feb 23 23:32 README.md\n",
+      "-rw-r--r-- 1 elkomy elkomy 29895 Feb 24 21:25 alx-system_engineering-devops.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x00-shell_basics/3-listfiles"
    ]
   },
   {
