--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -104,7 +104,32 @@
     }
    ],
    "source": [
-    "!git pull"
+    "!git pull\n",
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting README.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file README.md\n",
+    "\n",
+    "This is a file inside the folder alx-system_engineering-devops.\n",
+    "This is a mandatory file.\n",
+    "The following should be done on 0x00-shell_basics/\n",
+    "1- Write a script that prints the absolute path name of the current working directory. \n",
+    "2- Display the contents list of your current directory.\n",
+    "3- "
    ]
   },
   {
@@ -121,7 +146,10 @@
     }
    ],
    "source": [
-    "!git push"
+    "\n",
+    "!git add .\n",
+    "!git commit -m \"commiting the alx-system_devops-engineering README.md file\"\n",
+    "!git push -u origin main"
    ]
   },
   {
@@ -156,26 +184,6 @@
     "* GitHub repository: ``` alx-system_engineering-devops ```\n",
     "* Directory: <code> 0x00-shell_basics </code>\n",
     "* File: <code>  0-current_working_directory </code>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting README.md\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file README.md\n",
-    "\n",
-    "This is a file inside the folder alx-system_engineering-devops.\n",
-    "This is a mandatory file."
    ]
   },
   {
@@ -665,24 +673,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e48f9a6] commit 3-listfiles\n",
-      " 1 file changed, 15 insertions(+), 34 deletions(-)\n",
+      "[main 154bd60] commit 3-listfiles\n",
+      " 1 file changed, 50 insertions(+), 13 deletions(-)\n",
       "Enumerating objects: 5, done.\n",
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 410 bytes | 410.00 KiB/s, done.\n",
+      "Writing objects: 100% (3/3), 524 bytes | 524.00 KiB/s, done.\n",
       "Total 3 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   8f9e440..e48f9a6  main -> main\n",
+      "   3ebeef5..154bd60  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
