committing the 4-listmorefiles

--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -129,19 +129,32 @@
     "The following should be done on 0x00-shell_basics/\n",
     "1- Write a script that prints the absolute path name of the current working directory. \n",
     "2- Display the contents list of your current directory.\n",
-    "3- "
+    "3- Display current directory contents in a long format\n",
+    "4- Display current directory contents, including hidden files (starting with `.`). Use the long format.\n",
+    "5- "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\n"
+      "[main e4c0f50] commiting the alx-system_devops-engineering README.md file\n",
+      " 2 files changed, 42 insertions(+), 28 deletions(-)\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 843 bytes | 843.00 KiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   154bd60..e4c0f50  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
@@ -745,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -764,11 +777,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/bin/bash\n",
+      "ls -la\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 56\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 .\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 24 21:40 .git\n",
+      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 11 00:26 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy   425 Feb 24 21:50 README.md\n",
+      "-rw-r--r--  1 elkomy elkomy 32028 Feb 24 21:52 alx-system_engineering-devops.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x00-shell_basics/4-listmorefiles"
    ]
   },
   {
