--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -828,25 +828,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 1b33355] committing the 4-listmorefiles\n",
-      " 2 files changed, 14 insertions(+), 15 deletions(-)\n",
-      " mode change 100644 => 100755 0x00-shell_basics/4-listmorefiles\n",
+      "[main 07b8252] committing the 4-listmorefiles\n",
+      " 2 files changed, 59 insertions(+), 22 deletions(-)\n",
       "Enumerating objects: 7, done.\n",
       "Counting objects: 100% (7/7), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 506 bytes | 506.00 KiB/s, done.\n",
-      "Total 4 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Writing objects: 100% (4/4), 889 bytes | 889.00 KiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e48f9a6..1b33355  main -> main\n",
+      "   e4c0f50..07b8252  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -859,21 +858,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 52\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 10 18:49 .\n",
-      "drwxr-xr-x 15 elkomy elkomy  4096 Feb 10 19:07 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 11 00:07 .git\n",
+      "total 56\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 .\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 24 21:52 .git\n",
       "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 10 18:49 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy    32 Feb 10 18:52 README.md\n",
-      "-rw-r--r--  1 elkomy elkomy 27213 Feb 11 00:07 alx-system_engineering-devops.ipynb\n"
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 11 00:26 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy   425 Feb 24 21:50 README.md\n",
+      "-rw-r--r--  1 elkomy elkomy 32553 Feb 24 21:52 alx-system_engineering-devops.ipynb\n"
      ]
     }
    ],
@@ -923,26 +922,21 @@
     "\n",
     "##### Repo:\n",
     "\n",
-    "* GitHub repository: alx-system_engineering-devops\n",
-    "* Directory: 0x00-shell_basics\n",
-    "* File: 5-listfilesdigitonly"
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `5-listfilesdigitonly`"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/5-listfilesdigitonly\n"
+      "Overwriting 0x00-shell_basics/5-listfilesdigitonly\n"
      ]
     }
    ],
@@ -954,21 +948,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 52\n",
+      "total 56\n",
       "drwxr-xr-x  4 1000 1000  4096 Feb 11 00:26 .\n",
-      "drwxr-xr-x 15 1000 1000  4096 Feb 10 19:07 ..\n",
-      "drwxr-xr-x  8 1000 1000  4096 Feb 11 00:07 .git\n",
+      "drwxr-xr-x 17 1000 1000  4096 Feb 24 17:50 ..\n",
+      "drwxr-xr-x  8 1000 1000  4096 Feb 24 21:52 .git\n",
       "-rw-r--r--  1 1000 1000    11 Feb 10 18:55 .gitignore\n",
       "drwxr-xr-x  2 1000 1000  4096 Feb 11 00:26 0x00-shell_basics\n",
-      "-rw-r--r--  1 1000 1000    32 Feb 10 18:52 README.md\n",
-      "-rw-r--r--  1 1000 1000 27721 Feb 11 00:27 alx-system_engineering-devops.ipynb\n"
+      "-rw-r--r--  1 1000 1000   460 Feb 24 21:55 README.md\n",
+      "-rw-r--r--  1 1000 1000 32492 Feb 24 22:00 alx-system_engineering-devops.ipynb\n"
      ]
     }
    ],
